Task 23. added fixes to footer-address, social-link, and svg classes for dark mode

--- a/0x01-CSS_advanced/styles/23-style.css
+++ b/0x01-CSS_advanced/styles/23-style.css
@@ -209,6 +209,6 @@ ul.row {
     display: block;
 }
 
-.social-link > .svg {
+.social-link > svg {
     background-color: var(--text-color);
 }
